--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "css-loader": "^3.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-sanitizer": "^1.0.5",
     "jquery": "^3.4.1",
+    "mini-css-extract-plugin": "^0.7.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1",
-    "css-loader": "^3.0.0",
-    "mini-css-extract-plugin": "^0.7.0",
     "popper.js": "^1.15.0",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
